--- a/app/src/index.css
+++ b/app/src/index.css
@@ -9,11 +9,46 @@
   z-index: 10;
   .suggested-theorems{
     background: white;
-    padding: 10px;
+
     .theorem{
       padding-top: 5px;
     }
   }
+
+  background: white;
+  padding: 10px;
+
+  .hypothesis{
+    margin-bottom: 10px;
+    input{
+      color: inherit;
+      &::placeholder {
+        color: inherit;
+        opacity: 0.6;
+      }
+    }
+  }
+
+  button{
+    border: none;
+    padding: 3px 12px;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: bold;
+    color: #3c3b3bbd;
+    border-radius: 2px;
+    margin-top: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    background: #f0f0f0;
+    &:hover{
+      background: #e7e7e7;
+    }
+  }
+}
+
+.-is-searched{
+  border: 2px solid green !important;
 }
 
 
