--- a/app/src/index.css
+++ b/app/src/index.css
@@ -354,6 +354,9 @@ footer{
   .tactic{
     max-width: 200px;
     min-width: 100%;
+    /* This is for interaction of <header/> + .tactic */
+    z-index: 1;
+    position: relative;
   }
 }
 #box-1 > .box-insides > .goals{
