css - make sure the 1st row in `have` boxes doesn't have padding-bottom

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -300,7 +300,7 @@ header{
   }
 
   &.-hoistAndPaddingBottomBig +.box-insides{
-    .hypothesis-table:first-child tr:nth-child(3) td{
+    > .hypothesis-table:first-child tr:nth-child(3) td{
       padding-top: 20px;
     }
   }
