`<TacticNode/>` - make red backgrounds & ppp-image-for-active-goal UIs experimenta

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,5 @@
+/* 
+These are experimental.
 
 .active-tactic{
   text-align: center;
@@ -10,7 +12,7 @@
 .box.-sorried{
   background: red;
 }
-
+*/
 
 /*______________________ BODY: prettiness ______________________*/
 body *{
