`<BoxEl/>` - only show spawned `by` boxes when we are working on them

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -113,7 +113,7 @@ body{
   border-radius: 3px;
   flex-grow: 1;
 
-  .child-boxes{
+  .child-boxes, .byBoxes{
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
