--- a/app/src/index.css
+++ b/app/src/index.css
@@ -197,6 +197,10 @@ body{
 
   color: #72787c;
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23c7ccce' stroke-width='3' stroke-dasharray='4%2c 6' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+  &.-position-matches{
+    font-weight: bold;
+    color: #363d59;
+  }
   &.-success{
     /* center text */
     display: flex;
@@ -215,6 +219,9 @@ body{
   }
   &.-ellipsis{
     text-align: center;
+    font-weight: bold;
+    color: #363d59;
+    letter-spacing: 2px;
     background: rgba(82, 95, 98, 0.049);
     background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23c7ccce' stroke-width='3' stroke-dasharray='4%2c 6' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
   }
