--- a/app/src/index.css
+++ b/app/src/index.css
@@ -14,6 +14,15 @@ These are experimental.
 }
 */
 
+.single-tactic-hyp-row{
+  padding-top: 2px;
+  display: block !important;
+  .hypothesis{
+    display: block;
+    width: fit-content;
+  }
+}
+
 .proof-tree.-isSingleTacticModeON #box-1{ width: 100vw !important; }
 
 .tactic.-hypothesis-tactic{
