--- a/app/src/index.css
+++ b/app/src/index.css
@@ -58,7 +58,7 @@ These are experimental.
         word-spacing: 8px;
       }
     }
-    .body{
+    .type{
       margin-left: 19px;
       color: #5a5656;
       font-size: 13px;
