--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,8 +1,8 @@
 .proof-tree.-isSingleTacticModeON{
   #box-1{ width: 100vw !important; }
 
-  .row-2 .hypothesis.-highlighted, .hypothesis.data.-highlighted{
-    border-color: rgba(100, 173, 115, 0.873);
+  .hypothesis.-highlighted, .hypothesis.data.-highlighted{
+    border-color: #72787C;
   }
   .hypothesis-table .hypothesis.-highlighted{
     border-color: rgb(152 214 179) !important;
