--- a/app/src/index.css
+++ b/app/src/index.css
@@ -40,6 +40,10 @@
   font-family: var(--vscode-editor-font-family);
 }
 
+.proof-tree.-we-are-on-ellipsis-tactic{
+  .hypothesis.-highlighted, .goal.-highlighted{ border-color: #72787C; }
+}
+
 /* This is for folding/unfolding `have`s */
 .tactic.-hypothesis-tactic{
   display: flex;
@@ -266,25 +270,23 @@ body{
     padding-bottom: 8px;
   }
 }
+
 .hypothesis{
   background: #a4dabc;
   border: 2px solid rgb(152 214 179);
   .name{ color: #d0005b; }
-  &.-highlighted{ border-color: #50a961; }
   &.-hidden{ cursor: pointer; }
 }
 .-isGreenHypothesesOFF{
   .hypothesis.data{
     background: #f9e9b5;
     border: 2px solid rgb(239, 227, 152);
-    &.-highlighted{ border-color: #e0c732; }
   }
 }
 .goal{
   background: rgb(249, 195, 195);
   border: 2px solid rgb(246, 185, 185);
   color: #5a5656;
-  &.-highlighted{ border-color: #d06868; }
 }
 
 .proof-tree.-isHiddenGoalNamesON{
