css - make .tactic font-family cute again

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -37,7 +37,7 @@
   }
 }
 .tactic{
-  font-family: var(--vscode-editor-font-family);
+  /* font-family: var(--vscode-editor-font-family); */
 }
 
 .proof-tree.-we-are-on-ellipsis-tactic{
